--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div class="nav">
           <ul class="navbar-nav  me-auto mb-2 mb-lg-0 ">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="#about">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">service </a>
+              <a class="nav-link" href="#services">service </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">blog</a>
+              <a class="nav-link" href="#blog">blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">causos</a>
+              <a class="nav-link" href="#causos">causos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">contact us</a>
+              <a class="nav-link" href="#contact">contact us</a>
             </li>
 
 
@@ -45,7 +45,7 @@
 
   <!--slider-->
 
-  <div class="slider">
+  <div class="slider" id="home">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -118,7 +118,7 @@
 
 
 
-  <div class="second">
+  <div class="second" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
@@ -167,7 +167,7 @@
 
 
 
-  <div class="third">
+  <div class="third" id="services">
     <div class="container text-center mt-5 pt-5 text-light">
       <h1 class="text-success ps-4 mb-4">_________<img src="images/heading_icon1.png" alt="" class="mt-4">_________</h1>
       <h2>OUR NEW SERVICES</h2>
@@ -269,7 +269,7 @@
 
 
 
-  <div class="fifth">
+  <div class="fifth" id="causos">
     <div class="container">
       <div class="row text-center text-light pt-5">
         <h1 class="text-success ps-4 mb-4">_________<img src="images/heading_icon1.png" alt="" class="mt-4">_________</h1>
@@ -325,7 +325,7 @@
 
 
 
-  <div class="sixth">
+  <div class="sixth" id="blog">
     <div class="container">
       <div class="row text-center pt-5">
         <h1 class="text-success ps-4 mb-4">_________<img src="images/heading_icon.png" alt="" class="mt-4">_________</h1>
@@ -482,7 +482,7 @@
 
 
 
-  <div class="nine">
+  <div class="nine" id="contact">
     <div class="container">
       <div class="row text-light text-center">
         <div class="col-lg-12">
